--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,20 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter: ^8.4.0
   shamsi_date: ^0.5.2
+  introduction_screen: ^0.0.5
+  shared_preferences: ^0.5.2
+  connectivity: ^0.4.3+1
+  http: ^0.12.0+2
+  validators: ^2.0.0+1
+  dio: ^2.1.3
+  cached_network_image: ^0.7.0
+
+
+
+
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +79,8 @@ flutter:
    - assets/images/logo.jpg
    - assets/images/bill.png
    - assets/images/gallery.png
-   - assets/images/football.png   
+   - assets/images/football.png
+   - assets/images/icon-background.png   
 
 
   #  - images/a_dot_ham.jpeg
