--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   validators: ^2.0.0+1
   dio: ^2.1.3
   cached_network_image: ^0.7.0
+  scoped_model: ^1.0.1
+
 
 
 
@@ -58,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/avatar.jpg
+   - assets/images/avatar.png
    - assets/images/school.png
    - assets/images/classroom.png
    - assets/images/library.png
